syntax = "proto3";

package com.jiangfucheng.im.protobuf;

option java_package = "com.jiangfucheng.im.protobuf";
option java_outer_classname = "GroupChat";

message GroupChatRequest {
    int64 msg_id = 1;
    int64 group_id = 2;
    int64 from_id = 3;
    int32 type = 4;
    string content = 5;
    string token = 6;
}

message GroupChatResponse {
    int64 msg_id = 1;
    int64 timestamp = 2;
    int64 from_id = 3;
    int64 group_id = 4;
}